--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "animate.css": "^3.6.1",
     "bootstrap": "^4.1.1",
+    "firebase": "^5.2.0",
     "react": "^16.4.1",
     "react-animated-css": "^1.0.4",
     "react-dom": "^16.4.1",
