--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react-pdf": "^3.0.5",
     "react-router-dom": "^4.3.1",
     "react-scripts": "1.1.4",
+    "react-to-print": "^1.0.21",
     "reactstrap": "^6.1.0",
     "sweetalert": "^2.1.0"
   },
