--- a/package.json
+++ b/package.json
@@ -4,17 +4,17 @@
   "private": true,
   "dependencies": {
     "animate.css": "^3.6.1",
-    "bootstrap": "^4.1.1",
-    "firebase": "^5.2.0",
-    "react": "^16.4.1",
+    "bootstrap": "^4.4.1",
+    "firebase": "^7.6.1",
+    "react": "^16.12.0",
     "react-animated-css": "^1.0.4",
-    "react-dom": "^16.4.1",
+    "react-dom": "^16.12.0",
     "react-icons-kit": "^1.1.5",
     "react-loading": "^2.0.2",
-    "react-pdf": "^3.0.5",
-    "react-router-dom": "^4.3.1",
-    "react-scripts": "1.1.4",
-    "reactstrap": "^6.1.0",
+    "react-pdf": "^4.1.0",
+    "react-router-dom": "^5.1.2",
+    "react-scripts": "^3.3.0",
+    "reactstrap": "^8.2.0",
     "sweetalert": "^2.1.0"
   },
   "scripts": {
